src/assets/styles/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;



/* clears the input 'X' from Internet Explorer */
input[type=search]::-ms-clear {
    display: none;
    width: 0;
    height: 0;
  }
  
  input[type=search]::-ms-reveal {
    display: none;
    width: 0;
    height: 0;
  }
  
  /* clears the input 'X' from Chrome */
  input[type="search"]::-webkit-search-decoration,
  input[type="search"]::-webkit-search-cancel-button,
  input[type="search"]::-webkit-search-results-button,
  input[type="search"]::-webkit-search-results-decoration {
    display: none;
  }
  
  /* button[disabled] {
    cursor: not-allowed;
  } */

  @font-face {
    font-family: "MoonLight";
    src: url("../../../public/fonts/MoonLight.otf");
  }
  @font-face {
    font-family: "MoonBold";
    src: url("../../../public/fonts/MoonBold.otf");
  }
  @font-face {
    font-family:"Monda";
    src: url("../../../public/fonts/Monda-Regular.ttf");

  } 
  @font-face {
    font-family:"Jost";
    src: url("../../../public/fonts/Jost-SemiBold.ttf");

  } 
  @font-face {
    font-family:"OpenSans";
    src: url("../../../public/fonts/OpenSans-Regular.ttf");

  } 

  @layer components {
    
    .dre-container {
      @apply text-green-500 mx-auto max-w-3xl p-4;
    }
    
    .dre-title {
      @apply text-xl py-2;
    }
    .dre-aligna {
      @apply text-justify py-2;
    }
    .dre-spacer {
      @apply py-4;
    }
    .dre-upcoming-title {
      @apply text-3xl uppercase py-4 font-moon;
    }
    .dre-upcoming-wrapper  {
      @apply flex py-2 ;
    }
    .dre-cards-container {
      @apply mx-auto max-w-3xl py-4 grid grid-cols-1 sm:grid-cols-2 gap-8
    }
    .dre-card-wrapper {
      @apply bg-green-300 text-white  shadow-green-500 drop-shadow-2xl
    }
    .dre-card-img {
      @apply scale-100 h-60
    }
    .dre-card-data-wrapper {
      @apply grid grid-cols-8 px-2 py-4 gap-4
    }
    .dre-card-icon {
      @apply col-start-1 col-end-2 justify-self-center
    }
    .dre-card-info {
      @apply col-start-2 col-end-8
    }
    .dre-media-container {
      @apply rounded-lg text-green-500 mx-auto max-w-3xl p-4 shadow-green-500 drop-shadow-2xl
    }
    .dre-media-grid {
      @apply grid grid-cols-1 sm:grid-cols-4
    }
    .dre-media-grid-item {
      @apply  text-white h-80 flex flex-col justify-center items-center
    }
    .dre-media-item-icon {
      @apply h-24
    }
    .dre-media-item-link {
      @apply py-8
    }
    .dre-media-banner {
      @apply text-white flex items-center justify-end pb-4  gap-4
    }
    .dre-media-insta-types {
      @apply w-full h-auto rounded-lg
    }
    
    .btn-primary {
      @apply flex mx-auto text-white bg-green-500 border-0 py-2 px-8 focus:outline-none rounded text-lg;
    }
    .form-input {
      @apply w-full rounded border border-green-500 focus:border-mint-200 text-base outline-none text-grey-400 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out;
    }
    .form-textarea {
      @apply w-full rounded border border-green-500 focus:border-mint-200 h-52 text-base outline-none text-grey-400 py-1 px-3 resize-none leading-6 transition-colors duration-200 ease-in-out;
    }
  }
 
  

